feat: add CRUD for patient and ambulance
