# internal/reservation/model_ambulance.go
@@ -1,0 +1,23 @@
+/*
+ * Reservation API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package reservation
+
+type Ambulance struct {
+
+	Id string `json:"id,omitempty"`
+
+	Name string `json:"name,omitempty"`
+
+	Address string `json:"address,omitempty"`
+
+	OfficeHours OfficeHours `json:"officeHours,omitempty"`
+
+	MedicalExaminations []MedicalExaminations `json:"medicalExaminations,omitempty"`
+}
