# internal/reservation/model_get_ambulance_reservations_by_id_200_response.go
@@ -1,0 +1,17 @@
+/*
+ * Reservation API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package reservation
+
+type GetAmbulanceReservationsById200Response struct {
+
+	Ambulance Ambulance `json:"ambulance,omitempty"`
+
+	Reservations []Reservation `json:"reservations,omitempty"`
+}
