# internal/reservation/model_office_hours.go
@@ -1,0 +1,17 @@
+/*
+ * Reservation API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package reservation
+
+type OfficeHours struct {
+
+	Open string `json:"open,omitempty"`
+
+	Close string `json:"close,omitempty"`
+}
