# internal/reservation/model_patient.go
@@ -1,0 +1,25 @@
+/*
+ * Reservation API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package reservation
+
+type Patient struct {
+
+	Id string `json:"id"`
+
+	FirstName string `json:"firstName"`
+
+	LastName string `json:"lastName"`
+
+	Birthday string `json:"birthday"`
+
+	Sex Sex `json:"sex"`
+
+	Bio string `json:"bio,omitempty"`
+}
