# internal/reservation/model_request_examination_200_response_inner.go
@@ -1,0 +1,21 @@
+/*
+ * Reservation API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package reservation
+
+import (
+	"time"
+)
+
+type RequestExamination200ResponseInner struct {
+
+	Ambulance Ambulance `json:"ambulance,omitempty"`
+
+	TimeSlot time.Time `json:"timeSlot,omitempty"`
+}
