# internal/reservation/model_request_examination_request.go
@@ -1,0 +1,17 @@
+/*
+ * Reservation API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package reservation
+
+type RequestExaminationRequest struct {
+
+	Date string `json:"date,omitempty"`
+
+	ExaminationType MedicalExaminations `json:"examinationType,omitempty"`
+}
