# internal/reservation/model_reservation.go
@@ -1,0 +1,24 @@
+/*
+ * Reservation API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package reservation
+
+import (
+	"time"
+)
+
+type Reservation struct {
+
+	Patient Patient `json:"patient,omitempty"`
+
+	TimeSlot time.Time `json:"timeSlot,omitempty"`
+
+	// Optional message for the reservation
+	Message string `json:"message,omitempty"`
+}
