# internal/reservation/model_sex.go
@@ -1,0 +1,18 @@
+/*
+ * Reservation API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package reservation
+
+type Sex string
+
+// List of Sex
+const (
+	MALE Sex = "male"
+	FEMALE Sex = "female"
+)
