# internal/reservation/routers.go
@@ -1,10 +1,9 @@
 /*
- * Reservation List Api
+ * Reservation API
  *
- * Reservation List management for Web-In-Cloud system
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * API version: 1.0.0
- * Contact: xskriba@stuba.sk
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
  */
 
@@ -15,10 +14,20 @@ import (
 )
 
 func AddRoutes(engine *gin.Engine) {
-  group := engine.Group("/api")
+  group := engine.Group("")
   
   {
-    api := newHealthAPI()
+    api := newAmbulanceAPI()
+    api.addRoutes(group)
+  }
+  
+  {
+    api := newPatientAPI()
+    api.addRoutes(group)
+  }
+  
+  {
+    api := newReservationAPI()
     api.addRoutes(group)
   }
   
